# clipea

./: README.md  pyproject.toml  requirements.txt  setup.py
clipea/: __init__.py  __main__.py  bash_wrapper.sh  cli.py  clipea.sh  clipea_llm.py  commands.py  router.py  utils.py
tests/: test_utils.py
