[project]
    authors         = [{ name = "Lucas" }]
    dependencies    = ["clipea-cli>=0.1.0", "llm>=0.16", "loguru>=0.7.2", "setuptools>=74.1.2"]
    description     = ""
    name            = "clipea"
    readme          = "README.md"
    requires-python = ">=3.12"
    version         = "0.1.0"
